--- a/client/index.html
+++ b/client/index.html
@@ -6,9 +6,9 @@
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1" />
-    <link rel="icon" type="image/png" href="%VITE_APP_LOGO%" />
-    <link rel="apple-touch-icon" href="%VITE_APP_LOGO%" />
-    <title>%VITE_APP_TITLE%</title>
+    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="apple-touch-icon" href="/favicon.png" />
+    <title>Solinvest — Property Development & Investor Deals in Portugal</title>
     
     <!-- SEO Meta Tags -->
     <meta name="description" content="Solinvest sources, develops, and exits real-estate projects in Portugal. We handle end-to-end: sourcing, permits, construction, sales, and investor relations." />
