Checkpoint: v36: SEO Improvements - Aria-labels + JSON-LD Article Schema (Complete)
**Accessibility Improvements:**
- Added descriptive aria-labels to all homepage sections (hero, stats, about, services, challenges, regions, community, team, contact, footer)
- Each section now has semantic labels describing content and Portuguese imagery
- Improved screen reader navigation and WCAG compliance

**SEO Enhancements:**
- Implemented JSON-LD Article schema markup for Why Portugal page in TWO locations:
  1. Static schema in index.html (visible to all crawlers immediately)
  2. Dynamic schema via React useEffect (for SPA navigation)
- Schema includes: headline, description, 3 images (Lisbon, Algarve, Silver Coast), author, publisher, dates, keywords
- Optimized for Google rich snippets and search result enhancements
- Keywords: Portugal real estate, Lisbon, Algarve, Silver Coast, rental yields, international investment, Dutch/American investors

**Technical:**
- Build successful (warnings about chunk size, 0 TypeScript errors)
- index.html now 373.58 kB (includes Article schema)
- All images maintain SEO-optimized filenames
- Dual schema injection ensures maximum SEO coverage (static + dynamic)

--- a/client/index.html
+++ b/client/index.html
@@ -95,6 +95,42 @@
     }
     </script>
     
+    <!-- JSON-LD Schema: Article for Why Portugal Page -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Article",
+      "headline": "Why Portugal? The Ultimate Real Estate Investment Destination for 2025-2026",
+      "description": "Comprehensive analysis of Portugal's real estate market: investment opportunities, rental yields, quality of life, and why international investors are choosing Portuguese property.",
+      "image": [
+        "https://www.solinvest.net/portugal-real-estate-investment-lisbon-cityscape.jpg",
+        "https://www.solinvest.net/algarve-property-investment-portugal-beaches.jpg",
+        "https://www.solinvest.net/silver-coast-real-estate-portugal-nazare.jpg"
+      ],
+      "author": {
+        "@type": "Organization",
+        "name": "Solinvest",
+        "url": "https://www.solinvest.net"
+      },
+      "publisher": {
+        "@type": "Organization",
+        "name": "Solinvest",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://www.solinvest.net/solinvest-logo-white.png"
+        }
+      },
+      "datePublished": "2025-01-15",
+      "dateModified": "2025-01-15",
+      "mainEntityOfPage": {
+        "@type": "WebPage",
+        "@id": "https://www.solinvest.net/why-portugal"
+      },
+      "articleSection": "Real Estate Investment",
+      "keywords": "Portugal real estate, Portuguese property investment, Lisbon real estate, Algarve property, Silver Coast, rental yields Portugal, international investment Portugal, Dutch investors Portugal, American investors Portugal"
+    }
+    </script>
+    
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
